added connection between users and tasks
